# OctoPrint-BedReady

./: README.md  Taskfile.yml  pyproject.toml  setup.py
extras/: bedready.md
octoprint_bedready/: __init__.py
octoprint_bedready/static/css/: bedready.css
octoprint_bedready/static/js/: bedready.js
octoprint_bedready/templates/: bedready_settings.jinja2
