[build-system]
requires = [
    "setuptools>=68",
]
build-backend = "setuptools.build_meta"

[project]
name = "Bed-Ready"
version = "0.2.3"
description = "Plugin that uses the camera and opencv to determine if the bed matches a reference image indicating that the bed is clear and ready to start a print."
authors = [
    { name = "jneilliii", email = "jneilliii+github@gmail.com" },
]
requires-python = ">=3.7,<4"
dependencies = [
    "opencv-python-headless~=4.10.0.84",
]
dynamic = [
    "license",
]

[project.entry-points."octoprint.plugin"]
bedready = "octoprint_bedready"

[project.urls]
Homepage = "https://github.com/jneilliii/OctoPrint-BedReady"

[project.optional-dependencies]
develop = [
    "go-task-bin",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = [
    "octoprint_bedready",
    "octoprint_bedready.*",
]
